[SAU-1814] fix selectize z-index so year doesn't show through

--- a/app/styles/spatial-catch.scss
+++ b/app/styles/spatial-catch.scss
@@ -320,4 +320,8 @@
       padding-bottom: 10px;
     }
   }
+
+  .selectize-dropdown {
+    z-index: 2000;
+  }
 }
